...
        viewModelScope.launch {
            _state.value = RocketListState.Loading
            try {
                allRockets = repository.getRockets()
                updateFilteredList()
            } catch (e: Exception) {
                _state.value = RocketListState.Error("Error al cargar. Verifica tu conexión")
            }
        }
    }

    fun filter(query: String) {
        _searchText.value = query
...
